compiling_error.txt
/root/LPA/LPA/Insertion.cpp: In function 'void insertionSort(std::vector<int>&, int)':
/root/LPA/LPA/Insertion.cpp:20:27: error: invalid initialization of non-const reference of type 'std::vector<int>&' from an rvalue of type 'int'
         insertionSort(5, i);
                           ^
/root/LPA/LPA/Insertion.cpp:2:6: note: in passing argument 1 of 'void insertionSort(std::vector<int>&, int)'
 void insertionSort (vector<int>& data, int n)
      ^~~~~~~~~~~~~
/root/LPA/LPA/Insertion.cpp:20:28: error: expected '}' at end of input
         insertionSort(5, i);
                            ^
